# serializer version: 1
# name: TestDatabase.test_database_warehouse_joins_persons_poe_v2
  '''
  
  SELECT events__some_field.key AS key 
  FROM events LEFT JOIN (
  SELECT groups.key AS key, key AS events__some_field___key 
  FROM (
  SELECT groups.group_type_index AS index, groups.group_key AS key 
  FROM groups 
  WHERE equals(groups.team_id, 420) 
  GROUP BY groups.group_type_index, groups.group_key) AS groups) AS events__some_field ON equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.person_properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), events__some_field.events__some_field___key) 
  WHERE equals(events.team_id, 420) 
  LIMIT 50000
  '''
# ---
# name: TestDatabase.test_serialize_database_no_person_on_events
  '''
  {
      "events": {
          "fields": {
              "uuid": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "uuid",
                  "name": "uuid",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "event": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "event",
                  "name": "event",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "properties": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "properties",
                  "name": "properties",
                  "schema_valid": true,
                  "table": null,
                  "type": "json"
              },
              "timestamp": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "timestamp",
                  "name": "timestamp",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "distinct_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "distinct_id",
                  "name": "distinct_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "elements_chain": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "elements_chain",
                  "name": "elements_chain",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "created_at": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "created_at",
                  "name": "created_at",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "$session_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$session_id`",
                  "name": "$session_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$window_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$window_id`",
                  "name": "$window_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "pdi": {
                  "chain": null,
                  "fields": [
                      "team_id",
                      "distinct_id",
                      "person_id",
                      "person"
                  ],
                  "hogql_value": "pdi",
                  "name": "pdi",
                  "schema_valid": true,
                  "table": "person_distinct_ids",
                  "type": "lazy_table"
              },
              "poe": {
                  "chain": null,
                  "fields": [
                      "id",
                      "created_at",
                      "properties"
                  ],
                  "hogql_value": "poe",
                  "name": "poe",
                  "schema_valid": true,
                  "table": "events",
                  "type": "virtual_table"
              },
              "goe_0": {
                  "chain": null,
                  "fields": [
                      "key",
                      "created_at",
                      "properties"
                  ],
                  "hogql_value": "goe_0",
                  "name": "goe_0",
                  "schema_valid": true,
                  "table": "events",
                  "type": "virtual_table"
              },
              "goe_1": {
                  "chain": null,
                  "fields": [
                      "key",
                      "created_at",
                      "properties"
                  ],
                  "hogql_value": "goe_1",
                  "name": "goe_1",
                  "schema_valid": true,
                  "table": "events",
                  "type": "virtual_table"
              },
              "goe_2": {
                  "chain": null,
                  "fields": [
                      "key",
                      "created_at",
                      "properties"
                  ],
                  "hogql_value": "goe_2",
                  "name": "goe_2",
                  "schema_valid": true,
                  "table": "events",
                  "type": "virtual_table"
              },
              "goe_3": {
                  "chain": null,
                  "fields": [
                      "key",
                      "created_at",
                      "properties"
                  ],
                  "hogql_value": "goe_3",
                  "name": "goe_3",
                  "schema_valid": true,
                  "table": "events",
                  "type": "virtual_table"
              },
              "goe_4": {
                  "chain": null,
                  "fields": [
                      "key",
                      "created_at",
                      "properties"
                  ],
                  "hogql_value": "goe_4",
                  "name": "goe_4",
                  "schema_valid": true,
                  "table": "events",
                  "type": "virtual_table"
              },
              "person": {
                  "chain": null,
                  "fields": [
                      "id",
                      "created_at",
                      "team_id",
                      "properties",
                      "is_identified",
                      "pdi"
                  ],
                  "hogql_value": "person",
                  "name": "person",
                  "schema_valid": true,
                  "table": "persons",
                  "type": "lazy_table"
              },
              "person_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "person_id",
                  "name": "person_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "expression"
              },
              "$group_0": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$group_0`",
                  "name": "$group_0",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "group_0": {
                  "chain": null,
                  "fields": [
                      "index",
                      "team_id",
                      "key",
                      "created_at",
                      "updated_at",
                      "properties"
                  ],
                  "hogql_value": "group_0",
                  "name": "group_0",
                  "schema_valid": true,
                  "table": "groups",
                  "type": "lazy_table"
              },
              "$group_1": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$group_1`",
                  "name": "$group_1",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "group_1": {
                  "chain": null,
                  "fields": [
                      "index",
                      "team_id",
                      "key",
                      "created_at",
                      "updated_at",
                      "properties"
                  ],
                  "hogql_value": "group_1",
                  "name": "group_1",
                  "schema_valid": true,
                  "table": "groups",
                  "type": "lazy_table"
              },
              "$group_2": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$group_2`",
                  "name": "$group_2",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "group_2": {
                  "chain": null,
                  "fields": [
                      "index",
                      "team_id",
                      "key",
                      "created_at",
                      "updated_at",
                      "properties"
                  ],
                  "hogql_value": "group_2",
                  "name": "group_2",
                  "schema_valid": true,
                  "table": "groups",
                  "type": "lazy_table"
              },
              "$group_3": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$group_3`",
                  "name": "$group_3",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "group_3": {
                  "chain": null,
                  "fields": [
                      "index",
                      "team_id",
                      "key",
                      "created_at",
                      "updated_at",
                      "properties"
                  ],
                  "hogql_value": "group_3",
                  "name": "group_3",
                  "schema_valid": true,
                  "table": "groups",
                  "type": "lazy_table"
              },
              "$group_4": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$group_4`",
                  "name": "$group_4",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "group_4": {
                  "chain": null,
                  "fields": [
                      "index",
                      "team_id",
                      "key",
                      "created_at",
                      "updated_at",
                      "properties"
                  ],
                  "hogql_value": "group_4",
                  "name": "group_4",
                  "schema_valid": true,
                  "table": "groups",
                  "type": "lazy_table"
              },
              "session": {
                  "chain": null,
                  "fields": [
                      "id",
                      "session_id",
                      "session_id_v7",
                      "team_id",
                      "distinct_id",
                      "$start_timestamp",
                      "$end_timestamp",
                      "$urls",
                      "$num_uniq_urls",
                      "$entry_current_url",
                      "$entry_pathname",
                      "$end_current_url",
                      "$end_pathname",
                      "$entry_utm_source",
                      "$entry_utm_campaign",
                      "$entry_utm_medium",
                      "$entry_utm_term",
                      "$entry_utm_content",
                      "$entry_referring_domain",
                      "$entry_gclid",
                      "$entry_gad_source",
                      "$pageview_count",
                      "$autocapture_count",
                      "$screen_count",
                      "$channel_type",
                      "$session_duration",
                      "duration",
                      "$is_bounce",
                      "$last_external_click_url",
                      "$page_screen_autocapture_count_up_to"
                  ],
                  "hogql_value": "session",
                  "name": "session",
                  "schema_valid": true,
                  "table": "sessions",
                  "type": "lazy_table"
              },
              "elements_chain_href": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "elements_chain_href",
                  "name": "elements_chain_href",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "elements_chain_texts": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "elements_chain_texts",
                  "name": "elements_chain_texts",
                  "schema_valid": true,
                  "table": null,
                  "type": "array"
              },
              "elements_chain_ids": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "elements_chain_ids",
                  "name": "elements_chain_ids",
                  "schema_valid": true,
                  "table": null,
                  "type": "array"
              },
              "elements_chain_elements": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "elements_chain_elements",
                  "name": "elements_chain_elements",
                  "schema_valid": true,
                  "table": null,
                  "type": "array"
              },
              "event_person_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "event_person_id",
                  "name": "event_person_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "override": {
                  "chain": null,
                  "fields": [
                      "team_id",
                      "distinct_id",
                      "person_id",
                      "person"
                  ],
                  "hogql_value": "override",
                  "name": "override",
                  "schema_valid": true,
                  "table": "person_distinct_id_overrides",
                  "type": "lazy_table"
              }
          },
          "id": "events",
          "name": "events",
          "type": "posthog"
      },
      "groups": {
          "fields": {
              "index": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "index",
                  "name": "index",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "key": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "key",
                  "name": "key",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "created_at": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "created_at",
                  "name": "created_at",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "updated_at": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "updated_at",
                  "name": "updated_at",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "properties": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "properties",
                  "name": "properties",
                  "schema_valid": true,
                  "table": null,
                  "type": "json"
              }
          },
          "id": "groups",
          "name": "groups",
          "type": "posthog"
      },
      "persons": {
          "fields": {
              "id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "id",
                  "name": "id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "created_at": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "created_at",
                  "name": "created_at",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "properties": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "properties",
                  "name": "properties",
                  "schema_valid": true,
                  "table": null,
                  "type": "json"
              },
              "is_identified": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "is_identified",
                  "name": "is_identified",
                  "schema_valid": true,
                  "table": null,
                  "type": "boolean"
              },
              "pdi": {
                  "chain": null,
                  "fields": [
                      "team_id",
                      "distinct_id",
                      "person_id"
                  ],
                  "hogql_value": "pdi",
                  "name": "pdi",
                  "schema_valid": true,
                  "table": "person_distinct_ids",
                  "type": "lazy_table"
              },
              "$virt_initial_referring_domain_type": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$virt_initial_referring_domain_type`",
                  "name": "$virt_initial_referring_domain_type",
                  "schema_valid": true,
                  "table": null,
                  "type": "expression"
              },
              "$virt_initial_channel_type": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$virt_initial_channel_type`",
                  "name": "$virt_initial_channel_type",
                  "schema_valid": true,
                  "table": null,
                  "type": "expression"
              }
          },
          "id": "persons",
          "name": "persons",
          "type": "posthog"
      },
      "person_distinct_ids": {
          "fields": {
              "distinct_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "distinct_id",
                  "name": "distinct_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "person_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "person_id",
                  "name": "person_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "person": {
                  "chain": null,
                  "fields": [
                      "id",
                      "created_at",
                      "team_id",
                      "properties",
                      "is_identified",
                      "pdi",
                      "$virt_initial_referring_domain_type",
                      "$virt_initial_channel_type"
                  ],
                  "hogql_value": "person",
                  "name": "person",
                  "schema_valid": true,
                  "table": "persons",
                  "type": "lazy_table"
              }
          },
          "id": "person_distinct_ids",
          "name": "person_distinct_ids",
          "type": "posthog"
      },
      "session_replay_events": {
          "fields": {
              "session_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "session_id",
                  "name": "session_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "distinct_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "distinct_id",
                  "name": "distinct_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "first_url": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "first_url",
                  "name": "first_url",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "click_count": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "click_count",
                  "name": "click_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "keypress_count": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "keypress_count",
                  "name": "keypress_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "mouse_activity_count": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "mouse_activity_count",
                  "name": "mouse_activity_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "active_milliseconds": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "active_milliseconds",
                  "name": "active_milliseconds",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "console_log_count": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "console_log_count",
                  "name": "console_log_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "console_warn_count": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "console_warn_count",
                  "name": "console_warn_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "console_error_count": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "console_error_count",
                  "name": "console_error_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "size": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "size",
                  "name": "size",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "event_count": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "event_count",
                  "name": "event_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "message_count": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "message_count",
                  "name": "message_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "snapshot_source": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "snapshot_source",
                  "name": "snapshot_source",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "events": {
                  "chain": null,
                  "fields": [
                      "uuid",
                      "event",
                      "properties",
                      "timestamp",
                      "team_id",
                      "distinct_id",
                      "elements_chain",
                      "created_at",
                      "$session_id",
                      "$window_id",
                      "pdi",
                      "poe",
                      "goe_0",
                      "goe_1",
                      "goe_2",
                      "goe_3",
                      "goe_4",
                      "person",
                      "person_id",
                      "$group_0",
                      "group_0",
                      "$group_1",
                      "group_1",
                      "$group_2",
                      "group_2",
                      "$group_3",
                      "group_3",
                      "$group_4",
                      "group_4",
                      "session",
                      "elements_chain_href",
                      "elements_chain_texts",
                      "elements_chain_ids",
                      "elements_chain_elements",
                      "event_person_id",
                      "override"
                  ],
                  "hogql_value": "events",
                  "name": "events",
                  "schema_valid": true,
                  "table": "events",
                  "type": "lazy_table"
              },
              "properties": {
                  "chain": [
                      "events",
                      "properties"
                  ],
                  "fields": null,
                  "hogql_value": "properties",
                  "name": "properties",
                  "schema_valid": true,
                  "table": null,
                  "type": "field_traverser"
              },
              "pdi": {
                  "chain": null,
                  "fields": [
                      "team_id",
                      "distinct_id",
                      "person_id",
                      "person"
                  ],
                  "hogql_value": "pdi",
                  "name": "pdi",
                  "schema_valid": true,
                  "table": "person_distinct_ids",
                  "type": "lazy_table"
              },
              "console_logs": {
                  "chain": null,
                  "fields": [
                      "team_id",
                      "log_source",
                      "log_source_id",
                      "instance_id",
                      "timestamp",
                      "message",
                      "level"
                  ],
                  "hogql_value": "console_logs",
                  "name": "console_logs",
                  "schema_valid": true,
                  "table": "console_logs_log_entries",
                  "type": "lazy_table"
              },
              "person": {
                  "chain": [
                      "pdi",
                      "person"
                  ],
                  "fields": null,
                  "hogql_value": "person",
                  "name": "person",
                  "schema_valid": true,
                  "table": null,
                  "type": "field_traverser"
              },
              "person_id": {
                  "chain": [
                      "pdi",
                      "person_id"
                  ],
                  "fields": null,
                  "hogql_value": "person_id",
                  "name": "person_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "field_traverser"
              },
              "session": {
                  "chain": null,
                  "fields": [
                      "id",
                      "session_id",
                      "session_id_v7",
                      "team_id",
                      "distinct_id",
                      "$start_timestamp",
                      "$end_timestamp",
                      "$urls",
                      "$num_uniq_urls",
                      "$entry_current_url",
                      "$entry_pathname",
                      "$end_current_url",
                      "$end_pathname",
                      "$entry_utm_source",
                      "$entry_utm_campaign",
                      "$entry_utm_medium",
                      "$entry_utm_term",
                      "$entry_utm_content",
                      "$entry_referring_domain",
                      "$entry_gclid",
                      "$entry_gad_source",
                      "$pageview_count",
                      "$autocapture_count",
                      "$screen_count",
                      "$channel_type",
                      "$session_duration",
                      "duration",
                      "$is_bounce",
                      "$last_external_click_url",
                      "$page_screen_autocapture_count_up_to"
                  ],
                  "hogql_value": "session",
                  "name": "session",
                  "schema_valid": true,
                  "table": "sessions",
                  "type": "lazy_table"
              },
              "start_time": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "start_time",
                  "name": "start_time",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "end_time": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "end_time",
                  "name": "end_time",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              }
          },
          "id": "session_replay_events",
          "name": "session_replay_events",
          "type": "posthog"
      },
      "cohort_people": {
          "fields": {
              "person_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "person_id",
                  "name": "person_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "cohort_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "cohort_id",
                  "name": "cohort_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "person": {
                  "chain": null,
                  "fields": [
                      "id",
                      "created_at",
                      "team_id",
                      "properties",
                      "is_identified",
                      "pdi",
                      "$virt_initial_referring_domain_type",
                      "$virt_initial_channel_type"
                  ],
                  "hogql_value": "person",
                  "name": "person",
                  "schema_valid": true,
                  "table": "persons",
                  "type": "lazy_table"
              }
          },
          "id": "cohort_people",
          "name": "cohort_people",
          "type": "posthog"
      },
      "static_cohort_people": {
          "fields": {
              "person_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "person_id",
                  "name": "person_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "cohort_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "cohort_id",
                  "name": "cohort_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "person": {
                  "chain": null,
                  "fields": [
                      "id",
                      "created_at",
                      "team_id",
                      "properties",
                      "is_identified",
                      "pdi",
                      "$virt_initial_referring_domain_type",
                      "$virt_initial_channel_type"
                  ],
                  "hogql_value": "person",
                  "name": "person",
                  "schema_valid": true,
                  "table": "persons",
                  "type": "lazy_table"
              }
          },
          "id": "static_cohort_people",
          "name": "static_cohort_people",
          "type": "posthog"
      },
      "log_entries": {
          "fields": {
              "log_source": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "log_source",
                  "name": "log_source",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "log_source_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "log_source_id",
                  "name": "log_source_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "instance_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "instance_id",
                  "name": "instance_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "timestamp": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "timestamp",
                  "name": "timestamp",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "message": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "message",
                  "name": "message",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "level": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "level",
                  "name": "level",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              }
          },
          "id": "log_entries",
          "name": "log_entries",
          "type": "posthog"
      },
      "sessions": {
          "fields": {
              "id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "id",
                  "name": "id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "session_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "session_id",
                  "name": "session_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "session_id_v7": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "session_id_v7",
                  "name": "session_id_v7",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "distinct_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "distinct_id",
                  "name": "distinct_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$start_timestamp": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$start_timestamp`",
                  "name": "$start_timestamp",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "$end_timestamp": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$end_timestamp`",
                  "name": "$end_timestamp",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "$urls": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$urls`",
                  "name": "$urls",
                  "schema_valid": true,
                  "table": null,
                  "type": "array"
              },
              "$num_uniq_urls": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$num_uniq_urls`",
                  "name": "$num_uniq_urls",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "$entry_current_url": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$entry_current_url`",
                  "name": "$entry_current_url",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_pathname": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$entry_pathname`",
                  "name": "$entry_pathname",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$end_current_url": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$end_current_url`",
                  "name": "$end_current_url",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$end_pathname": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$end_pathname`",
                  "name": "$end_pathname",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_utm_source": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$entry_utm_source`",
                  "name": "$entry_utm_source",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_utm_campaign": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$entry_utm_campaign`",
                  "name": "$entry_utm_campaign",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_utm_medium": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$entry_utm_medium`",
                  "name": "$entry_utm_medium",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_utm_term": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$entry_utm_term`",
                  "name": "$entry_utm_term",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_utm_content": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$entry_utm_content`",
                  "name": "$entry_utm_content",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_referring_domain": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$entry_referring_domain`",
                  "name": "$entry_referring_domain",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_gclid": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$entry_gclid`",
                  "name": "$entry_gclid",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_gad_source": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$entry_gad_source`",
                  "name": "$entry_gad_source",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$pageview_count": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$pageview_count`",
                  "name": "$pageview_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "$autocapture_count": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$autocapture_count`",
                  "name": "$autocapture_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "$screen_count": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$screen_count`",
                  "name": "$screen_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "$channel_type": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$channel_type`",
                  "name": "$channel_type",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$session_duration": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$session_duration`",
                  "name": "$session_duration",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "duration": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "duration",
                  "name": "duration",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "$is_bounce": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$is_bounce`",
                  "name": "$is_bounce",
                  "schema_valid": true,
                  "table": null,
                  "type": "boolean"
              },
              "$last_external_click_url": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$last_external_click_url`",
                  "name": "$last_external_click_url",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              }
          },
          "id": "sessions",
          "name": "sessions",
          "type": "posthog"
      },
      "heatmaps": {
          "fields": {
              "session_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "session_id",
                  "name": "session_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "distinct_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "distinct_id",
                  "name": "distinct_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "x": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "x",
                  "name": "x",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "y": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "y",
                  "name": "y",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "scale_factor": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "scale_factor",
                  "name": "scale_factor",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "viewport_width": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "viewport_width",
                  "name": "viewport_width",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "viewport_height": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "viewport_height",
                  "name": "viewport_height",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "pointer_target_fixed": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "pointer_target_fixed",
                  "name": "pointer_target_fixed",
                  "schema_valid": true,
                  "table": null,
                  "type": "boolean"
              },
              "current_url": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "current_url",
                  "name": "current_url",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "timestamp": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "timestamp",
                  "name": "timestamp",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "type": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "type",
                  "name": "type",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              }
          },
          "id": "heatmaps",
          "name": "heatmaps",
          "type": "posthog"
      }
  }
  '''
# ---
# name: TestDatabase.test_serialize_database_with_person_on_events_enabled
  '''
  {
      "events": {
          "fields": {
              "uuid": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "uuid",
                  "name": "uuid",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "event": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "event",
                  "name": "event",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "properties": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "properties",
                  "name": "properties",
                  "schema_valid": true,
                  "table": null,
                  "type": "json"
              },
              "timestamp": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "timestamp",
                  "name": "timestamp",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "distinct_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "distinct_id",
                  "name": "distinct_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "elements_chain": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "elements_chain",
                  "name": "elements_chain",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "created_at": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "created_at",
                  "name": "created_at",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "$session_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$session_id`",
                  "name": "$session_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$window_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$window_id`",
                  "name": "$window_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "pdi": {
                  "chain": null,
                  "fields": [
                      "team_id",
                      "distinct_id",
                      "person_id",
                      "person"
                  ],
                  "hogql_value": "pdi",
                  "name": "pdi",
                  "schema_valid": true,
                  "table": "person_distinct_ids",
                  "type": "lazy_table"
              },
              "poe": {
                  "chain": null,
                  "fields": [
                      "id",
                      "created_at",
                      "properties"
                  ],
                  "hogql_value": "poe",
                  "name": "poe",
                  "schema_valid": true,
                  "table": "events",
                  "type": "virtual_table"
              },
              "goe_0": {
                  "chain": null,
                  "fields": [
                      "key",
                      "created_at",
                      "properties"
                  ],
                  "hogql_value": "goe_0",
                  "name": "goe_0",
                  "schema_valid": true,
                  "table": "events",
                  "type": "virtual_table"
              },
              "goe_1": {
                  "chain": null,
                  "fields": [
                      "key",
                      "created_at",
                      "properties"
                  ],
                  "hogql_value": "goe_1",
                  "name": "goe_1",
                  "schema_valid": true,
                  "table": "events",
                  "type": "virtual_table"
              },
              "goe_2": {
                  "chain": null,
                  "fields": [
                      "key",
                      "created_at",
                      "properties"
                  ],
                  "hogql_value": "goe_2",
                  "name": "goe_2",
                  "schema_valid": true,
                  "table": "events",
                  "type": "virtual_table"
              },
              "goe_3": {
                  "chain": null,
                  "fields": [
                      "key",
                      "created_at",
                      "properties"
                  ],
                  "hogql_value": "goe_3",
                  "name": "goe_3",
                  "schema_valid": true,
                  "table": "events",
                  "type": "virtual_table"
              },
              "goe_4": {
                  "chain": null,
                  "fields": [
                      "key",
                      "created_at",
                      "properties"
                  ],
                  "hogql_value": "goe_4",
                  "name": "goe_4",
                  "schema_valid": true,
                  "table": "events",
                  "type": "virtual_table"
              },
              "person": {
                  "chain": [
                      "poe"
                  ],
                  "fields": null,
                  "hogql_value": "person",
                  "name": "person",
                  "schema_valid": true,
                  "table": null,
                  "type": "field_traverser"
              },
              "person_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "person_id",
                  "name": "person_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$group_0": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$group_0`",
                  "name": "$group_0",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "group_0": {
                  "chain": null,
                  "fields": [
                      "index",
                      "team_id",
                      "key",
                      "created_at",
                      "updated_at",
                      "properties"
                  ],
                  "hogql_value": "group_0",
                  "name": "group_0",
                  "schema_valid": true,
                  "table": "groups",
                  "type": "lazy_table"
              },
              "$group_1": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$group_1`",
                  "name": "$group_1",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "group_1": {
                  "chain": null,
                  "fields": [
                      "index",
                      "team_id",
                      "key",
                      "created_at",
                      "updated_at",
                      "properties"
                  ],
                  "hogql_value": "group_1",
                  "name": "group_1",
                  "schema_valid": true,
                  "table": "groups",
                  "type": "lazy_table"
              },
              "$group_2": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$group_2`",
                  "name": "$group_2",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "group_2": {
                  "chain": null,
                  "fields": [
                      "index",
                      "team_id",
                      "key",
                      "created_at",
                      "updated_at",
                      "properties"
                  ],
                  "hogql_value": "group_2",
                  "name": "group_2",
                  "schema_valid": true,
                  "table": "groups",
                  "type": "lazy_table"
              },
              "$group_3": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$group_3`",
                  "name": "$group_3",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "group_3": {
                  "chain": null,
                  "fields": [
                      "index",
                      "team_id",
                      "key",
                      "created_at",
                      "updated_at",
                      "properties"
                  ],
                  "hogql_value": "group_3",
                  "name": "group_3",
                  "schema_valid": true,
                  "table": "groups",
                  "type": "lazy_table"
              },
              "$group_4": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$group_4`",
                  "name": "$group_4",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "group_4": {
                  "chain": null,
                  "fields": [
                      "index",
                      "team_id",
                      "key",
                      "created_at",
                      "updated_at",
                      "properties"
                  ],
                  "hogql_value": "group_4",
                  "name": "group_4",
                  "schema_valid": true,
                  "table": "groups",
                  "type": "lazy_table"
              },
              "session": {
                  "chain": null,
                  "fields": [
                      "id",
                      "session_id",
                      "session_id_v7",
                      "team_id",
                      "distinct_id",
                      "$start_timestamp",
                      "$end_timestamp",
                      "$urls",
                      "$num_uniq_urls",
                      "$entry_current_url",
                      "$entry_pathname",
                      "$end_current_url",
                      "$end_pathname",
                      "$entry_utm_source",
                      "$entry_utm_campaign",
                      "$entry_utm_medium",
                      "$entry_utm_term",
                      "$entry_utm_content",
                      "$entry_referring_domain",
                      "$entry_gclid",
                      "$entry_gad_source",
                      "$pageview_count",
                      "$autocapture_count",
                      "$screen_count",
                      "$channel_type",
                      "$session_duration",
                      "duration",
                      "$is_bounce",
                      "$last_external_click_url",
                      "$page_screen_autocapture_count_up_to"
                  ],
                  "hogql_value": "session",
                  "name": "session",
                  "schema_valid": true,
                  "table": "sessions",
                  "type": "lazy_table"
              },
              "elements_chain_href": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "elements_chain_href",
                  "name": "elements_chain_href",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "elements_chain_texts": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "elements_chain_texts",
                  "name": "elements_chain_texts",
                  "schema_valid": true,
                  "table": null,
                  "type": "array"
              },
              "elements_chain_ids": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "elements_chain_ids",
                  "name": "elements_chain_ids",
                  "schema_valid": true,
                  "table": null,
                  "type": "array"
              },
              "elements_chain_elements": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "elements_chain_elements",
                  "name": "elements_chain_elements",
                  "schema_valid": true,
                  "table": null,
                  "type": "array"
              }
          },
          "id": "events",
          "name": "events",
          "type": "posthog"
      },
      "groups": {
          "fields": {
              "index": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "index",
                  "name": "index",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "key": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "key",
                  "name": "key",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "created_at": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "created_at",
                  "name": "created_at",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "updated_at": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "updated_at",
                  "name": "updated_at",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "properties": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "properties",
                  "name": "properties",
                  "schema_valid": true,
                  "table": null,
                  "type": "json"
              }
          },
          "id": "groups",
          "name": "groups",
          "type": "posthog"
      },
      "persons": {
          "fields": {
              "id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "id",
                  "name": "id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "created_at": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "created_at",
                  "name": "created_at",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "properties": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "properties",
                  "name": "properties",
                  "schema_valid": true,
                  "table": null,
                  "type": "json"
              },
              "is_identified": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "is_identified",
                  "name": "is_identified",
                  "schema_valid": true,
                  "table": null,
                  "type": "boolean"
              },
              "pdi": {
                  "chain": null,
                  "fields": [
                      "team_id",
                      "distinct_id",
                      "person_id"
                  ],
                  "hogql_value": "pdi",
                  "name": "pdi",
                  "schema_valid": true,
                  "table": "person_distinct_ids",
                  "type": "lazy_table"
              },
              "$virt_initial_referring_domain_type": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$virt_initial_referring_domain_type`",
                  "name": "$virt_initial_referring_domain_type",
                  "schema_valid": true,
                  "table": null,
                  "type": "expression"
              },
              "$virt_initial_channel_type": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$virt_initial_channel_type`",
                  "name": "$virt_initial_channel_type",
                  "schema_valid": true,
                  "table": null,
                  "type": "expression"
              }
          },
          "id": "persons",
          "name": "persons",
          "type": "posthog"
      },
      "person_distinct_ids": {
          "fields": {
              "distinct_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "distinct_id",
                  "name": "distinct_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "person_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "person_id",
                  "name": "person_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "person": {
                  "chain": null,
                  "fields": [
                      "id",
                      "created_at",
                      "team_id",
                      "properties",
                      "is_identified",
                      "pdi",
                      "$virt_initial_referring_domain_type",
                      "$virt_initial_channel_type"
                  ],
                  "hogql_value": "person",
                  "name": "person",
                  "schema_valid": true,
                  "table": "persons",
                  "type": "lazy_table"
              }
          },
          "id": "person_distinct_ids",
          "name": "person_distinct_ids",
          "type": "posthog"
      },
      "session_replay_events": {
          "fields": {
              "session_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "session_id",
                  "name": "session_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "distinct_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "distinct_id",
                  "name": "distinct_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "first_url": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "first_url",
                  "name": "first_url",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "click_count": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "click_count",
                  "name": "click_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "keypress_count": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "keypress_count",
                  "name": "keypress_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "mouse_activity_count": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "mouse_activity_count",
                  "name": "mouse_activity_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "active_milliseconds": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "active_milliseconds",
                  "name": "active_milliseconds",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "console_log_count": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "console_log_count",
                  "name": "console_log_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "console_warn_count": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "console_warn_count",
                  "name": "console_warn_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "console_error_count": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "console_error_count",
                  "name": "console_error_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "size": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "size",
                  "name": "size",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "event_count": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "event_count",
                  "name": "event_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "message_count": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "message_count",
                  "name": "message_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "snapshot_source": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "snapshot_source",
                  "name": "snapshot_source",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "events": {
                  "chain": null,
                  "fields": [
                      "uuid",
                      "event",
                      "properties",
                      "timestamp",
                      "team_id",
                      "distinct_id",
                      "elements_chain",
                      "created_at",
                      "$session_id",
                      "$window_id",
                      "pdi",
                      "poe",
                      "goe_0",
                      "goe_1",
                      "goe_2",
                      "goe_3",
                      "goe_4",
                      "person",
                      "person_id",
                      "$group_0",
                      "group_0",
                      "$group_1",
                      "group_1",
                      "$group_2",
                      "group_2",
                      "$group_3",
                      "group_3",
                      "$group_4",
                      "group_4",
                      "session",
                      "elements_chain_href",
                      "elements_chain_texts",
                      "elements_chain_ids",
                      "elements_chain_elements"
                  ],
                  "hogql_value": "events",
                  "name": "events",
                  "schema_valid": true,
                  "table": "events",
                  "type": "lazy_table"
              },
              "properties": {
                  "chain": [
                      "events",
                      "properties"
                  ],
                  "fields": null,
                  "hogql_value": "properties",
                  "name": "properties",
                  "schema_valid": true,
                  "table": null,
                  "type": "field_traverser"
              },
              "pdi": {
                  "chain": null,
                  "fields": [
                      "team_id",
                      "distinct_id",
                      "person_id",
                      "person"
                  ],
                  "hogql_value": "pdi",
                  "name": "pdi",
                  "schema_valid": true,
                  "table": "person_distinct_ids",
                  "type": "lazy_table"
              },
              "console_logs": {
                  "chain": null,
                  "fields": [
                      "team_id",
                      "log_source",
                      "log_source_id",
                      "instance_id",
                      "timestamp",
                      "message",
                      "level"
                  ],
                  "hogql_value": "console_logs",
                  "name": "console_logs",
                  "schema_valid": true,
                  "table": "console_logs_log_entries",
                  "type": "lazy_table"
              },
              "person": {
                  "chain": [
                      "pdi",
                      "person"
                  ],
                  "fields": null,
                  "hogql_value": "person",
                  "name": "person",
                  "schema_valid": true,
                  "table": null,
                  "type": "field_traverser"
              },
              "person_id": {
                  "chain": [
                      "pdi",
                      "person_id"
                  ],
                  "fields": null,
                  "hogql_value": "person_id",
                  "name": "person_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "field_traverser"
              },
              "session": {
                  "chain": null,
                  "fields": [
                      "id",
                      "session_id",
                      "session_id_v7",
                      "team_id",
                      "distinct_id",
                      "$start_timestamp",
                      "$end_timestamp",
                      "$urls",
                      "$num_uniq_urls",
                      "$entry_current_url",
                      "$entry_pathname",
                      "$end_current_url",
                      "$end_pathname",
                      "$entry_utm_source",
                      "$entry_utm_campaign",
                      "$entry_utm_medium",
                      "$entry_utm_term",
                      "$entry_utm_content",
                      "$entry_referring_domain",
                      "$entry_gclid",
                      "$entry_gad_source",
                      "$pageview_count",
                      "$autocapture_count",
                      "$screen_count",
                      "$channel_type",
                      "$session_duration",
                      "duration",
                      "$is_bounce",
                      "$last_external_click_url",
                      "$page_screen_autocapture_count_up_to"
                  ],
                  "hogql_value": "session",
                  "name": "session",
                  "schema_valid": true,
                  "table": "sessions",
                  "type": "lazy_table"
              },
              "start_time": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "start_time",
                  "name": "start_time",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "end_time": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "end_time",
                  "name": "end_time",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              }
          },
          "id": "session_replay_events",
          "name": "session_replay_events",
          "type": "posthog"
      },
      "cohort_people": {
          "fields": {
              "person_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "person_id",
                  "name": "person_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "cohort_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "cohort_id",
                  "name": "cohort_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "person": {
                  "chain": null,
                  "fields": [
                      "id",
                      "created_at",
                      "team_id",
                      "properties",
                      "is_identified",
                      "pdi",
                      "$virt_initial_referring_domain_type",
                      "$virt_initial_channel_type"
                  ],
                  "hogql_value": "person",
                  "name": "person",
                  "schema_valid": true,
                  "table": "persons",
                  "type": "lazy_table"
              }
          },
          "id": "cohort_people",
          "name": "cohort_people",
          "type": "posthog"
      },
      "static_cohort_people": {
          "fields": {
              "person_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "person_id",
                  "name": "person_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "cohort_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "cohort_id",
                  "name": "cohort_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "person": {
                  "chain": null,
                  "fields": [
                      "id",
                      "created_at",
                      "team_id",
                      "properties",
                      "is_identified",
                      "pdi",
                      "$virt_initial_referring_domain_type",
                      "$virt_initial_channel_type"
                  ],
                  "hogql_value": "person",
                  "name": "person",
                  "schema_valid": true,
                  "table": "persons",
                  "type": "lazy_table"
              }
          },
          "id": "static_cohort_people",
          "name": "static_cohort_people",
          "type": "posthog"
      },
      "log_entries": {
          "fields": {
              "log_source": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "log_source",
                  "name": "log_source",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "log_source_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "log_source_id",
                  "name": "log_source_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "instance_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "instance_id",
                  "name": "instance_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "timestamp": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "timestamp",
                  "name": "timestamp",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "message": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "message",
                  "name": "message",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "level": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "level",
                  "name": "level",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              }
          },
          "id": "log_entries",
          "name": "log_entries",
          "type": "posthog"
      },
      "sessions": {
          "fields": {
              "id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "id",
                  "name": "id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "session_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "session_id",
                  "name": "session_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "session_id_v7": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "session_id_v7",
                  "name": "session_id_v7",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "distinct_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "distinct_id",
                  "name": "distinct_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$start_timestamp": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$start_timestamp`",
                  "name": "$start_timestamp",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "$end_timestamp": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$end_timestamp`",
                  "name": "$end_timestamp",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "$urls": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$urls`",
                  "name": "$urls",
                  "schema_valid": true,
                  "table": null,
                  "type": "array"
              },
              "$num_uniq_urls": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$num_uniq_urls`",
                  "name": "$num_uniq_urls",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "$entry_current_url": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$entry_current_url`",
                  "name": "$entry_current_url",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_pathname": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$entry_pathname`",
                  "name": "$entry_pathname",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$end_current_url": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$end_current_url`",
                  "name": "$end_current_url",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$end_pathname": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$end_pathname`",
                  "name": "$end_pathname",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_utm_source": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$entry_utm_source`",
                  "name": "$entry_utm_source",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_utm_campaign": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$entry_utm_campaign`",
                  "name": "$entry_utm_campaign",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_utm_medium": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$entry_utm_medium`",
                  "name": "$entry_utm_medium",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_utm_term": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$entry_utm_term`",
                  "name": "$entry_utm_term",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_utm_content": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$entry_utm_content`",
                  "name": "$entry_utm_content",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_referring_domain": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$entry_referring_domain`",
                  "name": "$entry_referring_domain",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_gclid": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$entry_gclid`",
                  "name": "$entry_gclid",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$entry_gad_source": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$entry_gad_source`",
                  "name": "$entry_gad_source",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$pageview_count": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$pageview_count`",
                  "name": "$pageview_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "$autocapture_count": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$autocapture_count`",
                  "name": "$autocapture_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "$screen_count": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$screen_count`",
                  "name": "$screen_count",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "$channel_type": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$channel_type`",
                  "name": "$channel_type",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "$session_duration": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$session_duration`",
                  "name": "$session_duration",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "duration": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "duration",
                  "name": "duration",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "$is_bounce": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$is_bounce`",
                  "name": "$is_bounce",
                  "schema_valid": true,
                  "table": null,
                  "type": "boolean"
              },
              "$last_external_click_url": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "`$last_external_click_url`",
                  "name": "$last_external_click_url",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              }
          },
          "id": "sessions",
          "name": "sessions",
          "type": "posthog"
      },
      "heatmaps": {
          "fields": {
              "session_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "session_id",
                  "name": "session_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "distinct_id": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "distinct_id",
                  "name": "distinct_id",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "x": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "x",
                  "name": "x",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "y": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "y",
                  "name": "y",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "scale_factor": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "scale_factor",
                  "name": "scale_factor",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "viewport_width": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "viewport_width",
                  "name": "viewport_width",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "viewport_height": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "viewport_height",
                  "name": "viewport_height",
                  "schema_valid": true,
                  "table": null,
                  "type": "integer"
              },
              "pointer_target_fixed": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "pointer_target_fixed",
                  "name": "pointer_target_fixed",
                  "schema_valid": true,
                  "table": null,
                  "type": "boolean"
              },
              "current_url": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "current_url",
                  "name": "current_url",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              },
              "timestamp": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "timestamp",
                  "name": "timestamp",
                  "schema_valid": true,
                  "table": null,
                  "type": "datetime"
              },
              "type": {
                  "chain": null,
                  "fields": null,
                  "hogql_value": "type",
                  "name": "type",
                  "schema_valid": true,
                  "table": null,
                  "type": "string"
              }
          },
          "id": "heatmaps",
          "name": "heatmaps",
          "type": "posthog"
      }
  }
  '''
# ---
